--- a/customers/templates/customers/client_form.html
+++ b/customers/templates/customers/client_form.html
@@ -42,6 +42,12 @@
           <textarea class="form-control form-control-sm" id="id_comment" name="comment" style="width: 80%;">{{ object.comment }}</textarea>
         </div>
 
+        <div class="form-group">
+          <label for="id_username"><strong>Пользователь создавший клиента:</strong></label>
+          <input type="text" class="form-control form-control-sm" id="id_username" name="username" style="width: 80%;" value="{{ request.user.email }}" readonly>
+        </div>
+
+
         <button type="submit" class="btn btn-success mt-3">
           {% if object %}
           Сохранить
