--- a/mailing/templates/mailing/mailingsettings_list.html
+++ b/mailing/templates/mailing/mailingsettings_list.html
@@ -3,7 +3,11 @@
 {% block content %}
 <div class="container mt-5">
     <div class="mb-4">
-        <h1 class="text-center">Список ваших рассылок</h1>
+        {% if 'mailing.view_mailingsettings' in request.user.get_all_permissions %}
+            <h1 class="text-center">Рассылки</h1>
+        {% else %}
+            <h1 class="text-center">Список ваших рассылок</h1>
+        {% endif %}
     </div>
     <div class="mb-3">
         <a href="{% url 'mailing:create_mailing' %}" class="btn btn-primary">Добавить рассылку</a>
@@ -27,7 +31,11 @@
             {% for object in object_list %}
             <tr>
                 <th scope="row">{{ forloop.counter }}</th>
-                <td><strong><span style="color: blue;">{{ object.name }}</span></strong></td>
+                <td>
+                    <strong>
+                        <span style="color: {% if object.user == user %}blue{% else %}purple{% endif %};">{{ object.name }}</span>
+                    </strong>
+                </td>
                 <td>
                     {% if object.status == 'Создано' %}
                     <span style="color: green">{{ object.status }}</span>
