--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -62,15 +62,26 @@
 
                     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                         <li><a href="{% url 'main:home' %}" class="nav-link btn px-2">Главная</a></li>
+                        {% if perms.mailing.view_mailingsettings %}
+                        <li><a href="{% url 'mailing:mailing_list' %}" class="nav-link btn px-2">Все рассылки</a></li>
+                        {% else %}
                         <li><a href="{% url 'mailing:mailing_list' %}" class="nav-link btn px-2">Мои рассылки</a></li>
-                        <li><a href="#" class="nav-link btn px-2">Аналитика</a></li>
-                        <li><a href="#" class="nav-link btn px-2">Создать рассылку</a></li>
+                        {% endif %}
                         <li><a href="{% url 'customers:list' %}" class="nav-link btn px-2">Клиенты</a></li>
+                        <li><a href="{% url 'mailing_logs:logs_list' %}" class="nav-link btn px-2">Аналитика</a></li>
+                        {% if perms.users.view_user %}
+                        <li><a href="{% url 'users:users_list' %}" class="nav-link btn px-2 text-danger">Пользователи</a></li>
+                        {% endif %}
                     </ul>
 
                     <div class="text-end">
-                        <button type="button" class="btn btn-success me-2">Войти</button>
-                        <button type="button" class="btn btn-warning">Регистрация</button>
+                        {% if user.is_authenticated %}
+                            <a href="{% url 'users:profile' pk=user.pk %}" class="btn btn-primary me-2">Профиль</a>
+                            <a href="{% url 'users:logout' %}" class="btn btn-success me-2">Выйти</a>
+                        {% else %}
+                            <a href="{% url 'users:login' %}" class="btn btn-success me-2">Войти</a>
+                            <a href="{% url 'users:register' %}" class="btn btn-warning">Регистрация</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
@@ -83,7 +94,7 @@
             <footer class="py-3 my-4">
                 <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                     <li class="nav-item"><a href="{% url 'main:home' %}" class="nav-link px-2 text-body-secondary">Главная</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Наш блог</a></li>
+                    <li class="nav-item"><a href="{% url 'blog:blog_list' %}" class="nav-link px-2 text-body-secondary">Наш блог</a></li>
                     <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Цены</a></li>
                     <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQ</a></li>
                     <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">О нас</a></li>
