--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -2,20 +2,71 @@
 
 {% block content %}
 <div class="container mt-5">
-    <div class="row">
+    <a href="{% url 'blog:blog_list' %}" class="text-decoration-none">
+        <h3 class="text-center" style="margin-bottom: 70px; font-weight: lighter; color: black; font-family: 'Arial', sans-serif; font-style: italic; text-shadow: 0 0 10px rgba(0, 0, 255, 0.5);">
+            Rocketmail - сервис рассылок для эффективных коммуникаций
+            <hr>
+        </h3>
+    </a>
+
+    <div class="row" style="margin-bottom: 30px;">
         <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-            <h3 class="text-md-start">Всего рассылок</h3>
+            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
+                <text x="50%" y="50%" fill="white" dy=".3em" text-anchor="middle" font-size="48">{{ total_mailings }}</text>
+            </svg>
+            <h4 class="text-md-start" style="color: blue; text-align: center; margin-top: 10px;">Всего рассылок</h4>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-            <h3 class="text-md-start">Активных рассылок</h3>
+            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <title>Placeholder</title>
+                <rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
+                <text x="50%" y="50%" fill="white" dy=".3em" text-anchor="middle" font-size="48">{{ active_mailings }}</text>
+            </svg>
+            <h4 class="text-md-start" style="color: green; text-align: center; margin-top: 10px;">Активных рассылок</h4>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-            <h3 class="text-md-start">Уникальные клиенты</h3>
+            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <title>Placeholder</title>
+                <rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>
+                <text x="50%" y="50%" fill="white" dy=".3em" text-anchor="middle" font-size="48">{{ unique_clients }}</text>
+            </svg>
+            <h4 class="text-md-start" style="color: red; text-align: center; margin-top: 10px;">Уникальных клиентов</h4>
         </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
+    <hr>
+    <a href="{% url 'blog:blog_list' %}" style="color: blue;">Наш блог</a>
 
 
-    {% endblock %}
+    <div class="row">
+        {% for blog in random_blogs %}
+        <div class="col-md-6">
+            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                <div class="col p-4 d-flex flex-column position-static">
+                    <span class="text-secondary small">{{ blog.publication_date }}</span>
+                    <hr>
+                    <h6 class="mb-0">{{ blog.title|truncatechars:60 }}</h6>
+                    <hr>
+                    <p class="card-text mb-auto">{{ blog.content|truncatechars:70 }}</p>
+                    <a href="{% url 'blog:view' blog.pk %}" class="icon-link gap-1 icon-link-hoverstretched-link">
+                        Просмотреть
+                        <svg class="bi"><use xlink:href="#chevron-right"/></svg>
+                    </a>
+                </div>
+                <div class="col-auto d-none d-lg-block">
+                    {% if blog.image %}
+                    <img src="{{ blog.image.url }}" alt="Article Image" width="200" height="250">
+                    {% else %}
+                    <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/0/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                        <title>Placeholder</title>
+                        <rect width="100%" height="100%" fill="#55595c"/>
+                        <text x="50%" y="50%" text-anchor="middle" fill="#ffffff" font-size="20px"></text>
+                    </svg>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div><!-- /.container -->
+{% endblock %}
